tests/esproposal_export_star_as.warn/__snapshots__/jsfmt.spec.js.snap
exports[`test test.js 1`] = `
"/* @flow */

export * as foo from \"./test\";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1785
        fromString(\", \").join(path.map(print, \"specifiers\")),
                         ^

TypeError: fromString(...).join is not a function
    at printExportDeclaration (/src/printer.js:1785:26)
    at genericPrintNoParens (/src/printer.js:488:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at /src/printer.js:1601:18
    at FastPath.map (/src/fast-path.js:167:19)
    at printStatementSequence (/src/printer.js:1586:8)
    at /src/printer.js:238:16
"
`;
